# falcommand

./: .gitignore  Cargo.toml  reproduce_error.sh  reproduce_issue.sh  test_config_creation.rs  test_config_dir_creation.sh  test_debug_config.sh
.junie/: guideline.md
crates/falcommand-config/: Cargo.toml
crates/falcommand-config/src/: config.rs  lib.rs  types.rs
crates/falcommand-core/: Cargo.toml
crates/falcommand-core/src/: index.rs  lib.rs  search.rs  sync.rs
crates/falcommand-platform/: Cargo.toml
crates/falcommand-platform/src/: lib.rs  platform.rs
crates/falcommand-plugins/: Cargo.toml
crates/falcommand-plugins/src/: lib.rs  plugins.rs
crates/falcommand-ui/: Cargo.toml
crates/falcommand-ui/src/: ui.rs
docs/develop/: README.md  api-reference.md  architecture.md  build-deploy.md  config-priority-design.md  config.md  plugin-system.md  project-structure.md  setup.md
docs/user/: README.md
src/: app.rs  config.rs  index.rs  main.rs  platform.rs  plugins.rs  search.rs  sync.rs  ui.rs
