[package]
name = "falcommand-core"
version = "0.1.0"
edition = "2021"
description = "Core search and indexing engine for FalCommand"
license = "MIT"
authors = ["varubogu"]

[dependencies]
# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Async traits
async-trait = "0.1"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Fuzzy matching
fuzzy-matcher = "0.3"

# Collections
indexmap = "2.0"

# Date/Time
chrono = { version = "0.4", features = ["serde"] }

# Logging
log = "0.4"

# Cross-platform
dirs = "5.0"

# Internal dependencies
falcommand-config = { path = "../falcommand-config" }
falcommand-platform = { path = "../falcommand-platform" }