[package]
name = "falcommand-platform"
version = "0.1.0"
edition = "2021"
description = "Platform-specific implementations for FalCommand"
license = "MIT"
authors = ["varubogu"]

[dependencies]
# System tray support
tray-icon = "0.14"
image = "0.24"
# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Async traits
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }

# Logging
log = "0.4"

# Cross-platform
dirs = "5.0"

# Internal dependencies
falcommand-config = { path = "../falcommand-config" }

# Platform specific dependencies
[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3", features = ["winuser", "shellapi", "winreg"] }

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.25"
objc = "0.2"

[target.'cfg(target_os = "linux")'.dependencies]
x11 = "2.21"