[package]
name = "falcommand-plugins"
version = "0.1.0"
edition = "2021"
description = "Plugin system for FalCommand"
license = "MIT"
authors = ["varubogu"]

[dependencies]
# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Async traits
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging
log = "0.4"

# Internal dependencies
falcommand-config = { path = "../falcommand-config" }
falcommand-core = { path = "../falcommand-core" }