[package]
name = "falcommand-ui"
version = "0.1.0"
edition = "2021"
description = "User interface components for FalCommand"
license = "MIT"
authors = ["varubogu"]

[dependencies]
# UI Framework
slint = "1.3"

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Async traits
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }

# Logging
log = "0.4"

# Internal dependencies
falcommand-config = { path = "../falcommand-config" }
falcommand-core = { path = "../falcommand-core" }